linux (4.9.1-1~exp2) UNRELEASED; urgency=medium

  * abiupdate.py: Use current config instead of downloading previous config
  * abiupdate.py: Update base URLs
  * abiupdate.py: Add support for incoming.ports.debian.org

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000

linux (4.9.1-1~exp1) experimental; urgency=medium

  * New upstream release: https://kernelnewbies.org/Linux_4.9
    - Revert "default exported asm symbols to zero"
  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.1

  [ Ben Hutchings ]
  * Set ABI to trunk
  * Enable USERFAULTFD (except on armel/marvell)
  * [x86] PCI: Enable VMD as module
  * mm: Enable PAGE_POISONING (Closes: #849450), PAGE_POISONING_NO_SANITY
    (except on armel/marvell)
  * ieee802154: Enable IEEE802154_FAKELB as module
  * [armhf] leds,gpio: Enable LEDS_TCA6507 as module (Closes: #847770)
  * [x86] iio,HID: Enable INTEL_ISH_HID as module
  * hwmon,watchdog: Enable SENSORS_FTSTEUTATES as module (together with the
    previous, Closes: #847017)
  * net: Enable GTP as module (Closes: #846913)
  * [armhf] gpio: Enable GPIO_MCP23S08 as module (Closes: #845064)
  * aufs: Update support patchset to aufs4.9-20161219
  * Use debhelper compatibility level 9
  * [arm64] Revert "arm64/mm: Limit TASK_SIZE_64 ..." and add breaks on
    incompatible mozjs
  * genorig.py: Verify tag signatures (based on work by Yves-Alexis Perez)

  [ Uwe Kleine-König ]
  * enable `perf data' support; patch by Sebastian Andrzej Siewior
    (Closes: #846597)
  * [rt] Update to 4.9-rt1 and reenable
  * [armhf] Add support for switch hardware on Turris Omnia

  [ Aurelien Jarno ]
  * [arm64] Enable RTC_DRV_DS1307.

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 03:44:26 +0000

linux (4.9~rc8-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * radeon: Update package name in error message for missing firmware