@@ -105,7 +105,8 @@ else
 endif
 
 debian/control-real: debian/bin/gencontrol.py $(CONTROL_FILES)
-	$<
+# Hash randomisation makes the pickled config unreproducible
+	PYTHONHASHSEED=0 $<
 	md5sum $^ > debian/control.md5sum
 	@echo
 	@echo This target is made to fail intentionally, to make sure
